dataset1235/2025-2/1153765216/users/3146567693/executions/2814675586_3198308593.log
== SUBMISSION (2025-08-26 19:20:31)
-- CODE: 

import math

a = math.pi
raio = float(input("digite o tamanho do raio: "))
volume = 4 / 3 * a * raio ** 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
digite o tamanho do raio: 696.91
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
digite o tamanho do raio: 4.1888
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
digite o tamanho do raio: 137.2583
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
digite o tamanho do raio: 4188.7902
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
digite o tamanho do raio: 7238.2295
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
digite o tamanho do raio: 0.5236
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:19:24)
-- CODE: 

import maht

a = math.pi
raio = float(input("digite o tamanho do raio: ") 
volume = 4 / 3 * a * raio ** 3  
print(round(volume,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 5
    raio = float(input("digite o tamanho do raio: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 5
    raio = float(input("digite o tamanho do raio: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 5
    raio = float(input("digite o tamanho do raio: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 5
    raio = float(input("digite o tamanho do raio: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 5
    raio = float(input("digite o tamanho do raio: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 5
    raio = float(input("digite o tamanho do raio: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
